Login/stylefgt.css
:root {
    --branco: #ffffff;
    --preto: #0e0e0e;
    --preto-alt: #070706;
    --cinza: #8a8a8a;
    --cinzaescuro: #292929;
    --cinzafundo: #181818;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html, body {
    height: 100%;}

body {
    height: 100vh;

    background: url(imagens/fundo-pc.png) center center / cover no-repeat;

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;

    font-family: Arial, Helvetica, sans-serif;
}

.auth-page {
    height: 100vh;

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

main {
    background-color: #070706;
    color: var(--branco);

    border: 1px solid var(--branco);

    width: 350px;

    text-align: center;

    border-radius: 12px;

    padding: 10px;

    margin-top: -70px;

    transform: scale(0.80);
}

h1#titulo {
    color: var(--branco);
    font-size: 44px;
    margin-bottom: 25px;
    margin-top: 20px;
}

div > #logo {
    width: 30%;
    margin-bottom: 8px;
}

main > h2 {
    font-size: 32px;
    margin-top: 0;
}

main > p#desc {
    margin-bottom: 30px;
    padding-top: 5px;

    color: var(--cinza);
}

form  {    
    width: 85%;
    margin: 0 auto;

    display: flex;
    flex-direction: column;
}

.input-group label {
    margin-bottom: 8px;
}

.input-group input {
    width: 100%;
    height: 45px;

    background-color: var(--preto);
    color: var(--branco);

    border: 1px solid var(--cinzaescuro);
    border-radius: 6px;
    outline: none;

    padding-left: 40px;
    padding-right: 40px;
}

.input-group {
    display: flex;
    flex-direction: column;
    align-items: flex-start;

    position: relative;

}

.fa-envelope {
    position: absolute;
    margin-top: 41px;
    margin-left: 12px;
    
    color: var(--cinza);
}

button {
    width: 100%;
    height: 45px;

    background-color: #070706;
    color: var(--branco);

    border: 1px solid var(--branco);
    border-radius: 5px;

    font-weight: bold;
    cursor: pointer;

    
}

.divisao {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 12px;

    width: 85%;
    margin: 25px auto;
}

.divisao > div {
    flex: 1;
    height: 1px;
    
    background-color: var(--cinzaescuro);
}

.divisao p {
    color: var(--cinza);
    margin: 0;
}

.fa-arrow-right {
    position: absolute;
    left: 88%;
    top: 79%;
    
}

main > p:last-child {
    color: var(--cinza);
}

main > p > a {
    color: var(--branco);
    font-weight: bold;
    text-decoration: none;
}

main > p {
    padding-bottom: 10px;
}

#copyright {
   color: var(--cinza);
    text-align: center;
    
    position: relative;
    top: -35px;

    font-size: 12px;
}

